modefied python configuration file

--- a/.ebextensions/python.config
+++ b/.ebextensions/python.config
@@ -1,5 +1,10 @@
 option_settings:
-
   aws:elasticbeanstalk:container:python:
-
-    WSGIPath: app:app
+    WSGIPath: application:application
+    NumProcesses: 1
+    NumThreads: 20
+  aws:elasticbeanstalk:application:environment:
+    FLASK_APP: application.py
+    FLASK_ENV: production
+  aws:elasticbeanstalk:environment:proxy:
+    ProxyServer: nginx
